@@ -69,12 +69,12 @@ class PageLoadWaitResolverTest {
         when(waits.getPageLoadTimeout()).thenReturn(duration);
 
         MockedConstruction<PageLoadWait> mockedConstruction = mockConstruction(PageLoadWait.class, (mock, context) -> {
-            assertEquals(webDriver, context.arguments().get(0));
+            assertEquals(webDriver, context.arguments().getFirst());
             assertEquals(duration, context.arguments().get(1));
         });
 
         PageLoadWait actual = pageLoadWaitResolver.resolveParameter(parameterContext, extensionContext);
-        PageLoadWait pageLoadWait = mockedConstruction.constructed().get(0);
+        PageLoadWait pageLoadWait = mockedConstruction.constructed().getFirst();
         verify(store).put(PageLoadWaitResolver.PAGE_LOAD_WAIT, pageLoadWait);
         assertEquals(pageLoadWait, actual);
 
